Changed the name

--- a/base-app.yaml
+++ b/base-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: devops-app-of-apps
+  name: ghactions-app-of-apps
   namespace: argocd
 spec:
   destination:
