--- a/occurance-traker-dev/templates/app-config.yaml
+++ b/occurance-traker-dev/templates/app-config.yaml
@@ -9,7 +9,7 @@ data:
         name: OccurenceTrakerApplication
       data:
         redis:
-          host: redis-master.dev.svc.cluster.local
+          host: redis-dev-master.dev.svc.cluster.local
           port: 6379
           usePassword: true
           password: redis
